--- a/kislate_workshop/luogu/2025_/P1003_铺地毯.md
+++ b/kislate_workshop/luogu/2025_/P1003_铺地毯.md
@@ -72,9 +72,35 @@
 
 noip2011 提高组 day1 第 $1$ 题。
 下面是代码
+*此题或许可以考虑dp完全铺地毯,但是dp不是最优解*
 ```cpp
-#include <isotream>
-#include <string>
+#include <iostream>
 #include <vector>
+using namespace std;
 
+typedef struct{
+    int x, y;
+    int width, height;
+}carpet;
+
+int main(void)
+{
+    int n;
+    cin >> n;
+    vector<carpet>carpets(n);
+    for(int i = 0; i < n; i++)
+    {
+        cin >> carpets[i].x >> carpets[i].y >> carpets[i].width >> carpets[i].height; 
+    }
+    int nx, ny;
+    cin >> nx >> ny;
+    int ans = -1;
+    for(int i = 0; i < n; i++)
+    {
+        if(nx >= carpets[i].x && nx <=carpets[i].x + carpets[i].width && ny >=carpets[i].y && ny<=carpets[i].height+carpets[i].y)
+            ans = i + 1;
+    }
+    cout << ans << endl;
+    return 0;
+}
 ```
