--- a/kislate_workshop/luogu/2025_/P2574_XOR的艺术.md
+++ b/kislate_workshop/luogu/2025_/P2574_XOR的艺术.md
@@ -73,3 +73,66 @@ AKN 想知道一些时刻的伤害，请你帮助他求出这个伤害。
 另有 $30\%$ 的数据，保证 $n, m \leq 2 \times 10^3$。
 
 对于 $100\%$ 的数据，保证 $2 \leq n, m \leq 2 \times 10^5$，$0 \leq op \leq 1$，$1 \leq l \leq r \leq n$，$S$ 中只含字符 ``0`` 和字符 ``1``。
+下面是我的代码实现
+```cpp
+#include <iostream>
+#include <string>
+#include <bitset>
+#include <vector>
+
+using namespace std;
+
+int main(void)
+{
+    int n, m;
+    string string_damage;
+    cin >> n >> m >> string_damage;
+    vector<unsigned long long> Bis_to_ll(n / 64 + 1);
+    for(int i = 0; i < n; i++)
+    {
+        if(string_damage[i] == '1')
+            Bis_to_ll[i / 64] |= 1ULL << (i % 64);
+    }
+    for(int i = 0; i < m; i++)
+    {
+        int input_c, l, r;
+        cin >> input_c >> l >> r;
+        if(input_c)
+        {
+            // 输出1的个数
+            int ret = 0;
+            for (size_t j = l - 1; j < r; j++)
+            {
+                size_t block_idx = j / 64;
+                size_t bit_offset = j % 64;
+                if (Bis_to_ll[block_idx] & (1ULL << bit_offset))
+                    ret++;
+            }
+            cout << ret << endl;
+        }
+        else
+        {
+            // 反转
+            size_t block_idx_l = (l - 1) / 64;
+            size_t bit_offset_l = (l - 1) % 64;
+            size_t block_idx_r = (r - 1) / 64;
+            size_t bit_offset_r = (r - 1) % 64;
+            if (block_idx_l == block_idx_r)
+            {
+                Bis_to_ll[block_idx_l] ^= (((1ULL << (bit_offset_r - bit_offset_l + 1)) - 1) << bit_offset_l);
+            }
+            else
+            {
+                Bis_to_ll[block_idx_l] ^= (0xFFFFFFFFFFFFFFFFULL << bit_offset_l);
+                Bis_to_ll[block_idx_r] ^= ((1ULL << bit_offset_r) - 1);
+                for (size_t j = block_idx_l + 1; j < block_idx_r; j++)
+                {
+                    Bis_to_ll[j] = ~Bis_to_ll[j];
+                }
+            }
+        }
+    
+    }
+    return 0;
+}
+```
