--- a/kislate_workshop/luogu/2025_/P2574_XOR的艺术.md
+++ b/kislate_workshop/luogu/2025_/P2574_XOR的艺术.md
@@ -1,3 +1,4 @@
+*新算法:线段树*
 # P2574 XOR的艺术
 
 ## 题目描述
@@ -73,8 +74,176 @@ AKN 想知道一些时刻的伤害，请你帮助他求出这个伤害。
 另有 $30\%$ 的数据，保证 $n, m \leq 2 \times 10^3$。
 
 对于 $100\%$ 的数据，保证 $2 \leq n, m \leq 2 \times 10^5$，$0 \leq op \leq 1$，$1 \leq l \leq r \leq n$，$S$ 中只含字符 ``0`` 和字符 ``1``。
-下面是我的代码实现
+## 下面是我的代码实现,最终版
 ```cpp
+#include <iostream>
+#include <string>
+#include <vector>
+using namespace std;
+void push_up(int p, vector<int> &tree);
+void build(int p, int l, int r, vector<int> &tree, vector<int> &tag, string &damage);
+void push_down(int p, int mid, int l, int r, vector<int> &tree, vector<int> &tag);
+void update(int p, int l, int r, int L, int R, vector<int> &tree, vector<int> &tag);
+int query(int p, int l, int r, int L, int R, vector<int> &tree, vector<int> &tag);
+
+int main(void)
+{
+    int n, m;
+    string damage;
+    cin >> n >> m >> damage;
+    vector<int> tree(4 * n + 1, 0);
+    vector<int> tag(4 * n + 1, 0);
+    build(1, 1, n, tree, tag, damage);
+    for(int i = 0; i < m; i++)
+    {
+        int opt, l, r;
+        cin >> opt >> l >> r;
+        if(opt == 1)
+        {
+            cout << query(1, l, r, 1, n, tree, tag) << endl;
+        }
+        else
+        {
+            update(1, l, r, 1, n, tree, tag);
+        }
+    }
+    return 0;
+}
+
+void push_up(int p, vector<int> &tree)
+{
+    tree[p] = tree[p * 2] + tree[p * 2 + 1];
+}
+void build(int p, int l, int r, vector<int> &tree, vector<int> & tag, string &damage)
+{
+    if (l == r)
+    {
+        tree[p] = damage[l - 1] - '0';
+        return;
+    }
+    int mid = l + ((r - l) >> 1);
+    build(p * 2, l, mid, tree, tag, damage);
+    build(p * 2 + 1, mid + 1, r, tree, tag, damage);
+    push_up(p, tree);
+}
+
+void push_down(int p, int mid, int l, int r, vector<int> &tree, vector<int> &tag)
+{
+    if (tag[p])
+    {
+        tree[p * 2] = (mid - l + 1) - tree[p * 2];
+        tree[p * 2 + 1] = (r - mid) - tree[p * 2 + 1];
+        tag[p * 2] ^= 1;
+        tag[p * 2 + 1] ^= 1;
+        tag[p] = 0;
+    }
+}
+
+
+
+void update(int p, int l, int r, int L, int R, vector<int> &tree, vector<int> &tag)
+{
+    if (l <= L && R <=r)
+    {
+        tree[p] = (R - L + 1) - tree[p];
+        tag[p] ^= 1;
+        return;
+    }
+    int mid = L + ((R - L) >> 1);
+    push_down(p, mid, L, R, tree, tag);
+    if (l <= mid)
+    {
+        update(p * 2, l, r, L, mid, tree, tag);
+    }
+    if (r > mid)
+    {
+        update(p * 2 + 1, l, r, mid + 1, R, tree, tag);
+    }
+    push_up(p, tree);
+}
+
+int query(int p, int l, int r, int L, int R, vector<int> &tree, vector<int> &tag)
+{
+    if (l <= L && R <= r)
+    {
+        return tree[p];
+    }
+    int mid = L + ((R - L) >> 1);
+    push_down(p, mid, L, R, tree, tag);
+    int ret = 0;
+    if(l <= mid)
+    {
+        ret += query(p * 2, l, r, L, mid, tree, tag);
+    }
+    if(r > mid)
+    {
+        ret += query(p * 2 + 1, l, r, mid + 1, R, tree, tag);
+    }
+    return ret;
+}
+```
+
+## 不是很必要的代码
+下面是一些初尝试,不是超时就是wa:
+```cpp
+//XOR
+//2025
+#include <iostream>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+void stringChange(string& string_damage, int l, int r)
+{
+    int length = r-l+1;
+    string temp = string_damage.substr(l,length);
+    for(char& c : temp)
+    {
+        if(c == '0')
+            c = '1';
+        else
+            c = '0';
+    }
+    string_damage.replace(l,length,temp);
+}
+
+int stringCount(const string& string_damage, int l, int r)
+{
+    int ret = 0;
+    int length = r-l+1;
+    string temp = string_damage.substr(l,length);
+    for(char&c : temp)
+    {
+        if(c == '1')
+            ret++;
+    }
+    return ret;
+}
+
+int main(void)
+{
+    int n, m;
+    string string_damage;
+    cin >> n >> m >> string_damage;
+    for(int i = 0; i < m;i++)
+    {
+        int input_c, l, r;
+        cin >> input_c >> l >> r;
+        if(input_c)
+            cout << stringCount(string_damage,l-1,r-1) << endl;
+        else
+            stringChange(string_damage,l-1,r-1);
+    }
+    return 0;
+}
+
+```
+
+第二份:
+```cpp
+// XOR_2
+// 2025_2
 #include <iostream>
 #include <string>
 #include <bitset>
