--- a/kislate_workshop/Problems/luogu/2025_春季/梦境巡查.md
+++ b/kislate_workshop/Problems/luogu/2025_春季/梦境巡查.md
@@ -45,3 +45,51 @@
 ## 样例 #1
 
 ### 输入 #1
+
+## 下面是我的代码实现:
+```cpp
+#include <iostream>
+#include <vector>
+#include <queue>
+typedef struct{
+    int cost, gain, need;
+}node;
+
+using namespace std;
+
+int main(void)
+{
+    int n, rest;
+    int gain_sum = 0;
+    int cost_sum = 0;
+    vector<node>nodes(n, 0)
+     priority_queue<int> max_need;
+    for(int i = 0; i < n; i++)
+        cin >> nodes[i].cost;
+    cin >> rest;
+    nodes[n-1] += rest;
+    for(int i = 0; i < n; i++)
+    {
+        gain_cost += nodes[i].cost;
+        nodes[i].need = gain_cost - gain_sum;
+        cin >> nodes[i].gain;
+        gain_sum += nodes[i].gain;
+    }
+    
+    for(int i = 0; i < n ; i++)
+    {
+        sum_cost = sum_gain = 0;
+        for(int j = 0; j < n; j++)
+        {
+            gain_cost += nodes[i].cost;
+            nodes[i].need = gain_cost - gain_sum;
+            max_need.push(nodes[i].need);
+            if(j != i)
+                gain_sum += nodes[i].gain;
+        }
+        cout << max_meed.pop << " ";
+        priority_queue<int> empty;
+        swap(max_need, empty);
+    }
+}
+```
