--- a/kislate_workshop/Problems/luogu/2025_spring/DP/P1434_滑雪.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/DP/P1434_滑雪.md
@@ -46,21 +46,75 @@ Michael 喜欢滑雪。这并不奇怪，因为滑雪的确很刺激。可是为
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
-int main(void)
+int dx[4] = {0, 0, -1, 1};
+int dy[4] = {1, -1, 0, 0};
+int heights[102][102], sum[102][102], R, C;
+int search(int x, int y);
+int main(void){
+    int ans = -1e4;
+    cin >> R >> C;
+    for(int i = 1; i <= R; i++) for(int j = 1; j <= C; j++) cin >> heights[i][j];
+    for(int i = 1; i <= R; i++) for(int j = 1; j<= C; j++) ans = max(ans, search(i, j));
+    cout << ans << endl;
+    return 0;
+}
+int search(int x, int y)
 {
-    int row, col, max_length = 0;
-    cin >> row >> col;
-    vector<vector<int>> map_height(row+2, vector<int>(col+2, 0)), dp(row+2, vector<int>(col+2, 1));
-    for(int i = 1; i < row; i++) for(int j = 0; j < col; j++) cin >> dp[i][j];
-    for(int i = 1; i <= row; i++)
+    if(sum[x][y]) return sum[x][y];
+    sum[x][y] = 1;
+    int nx, ny;
+    for(int i = 0; i < 4; i++)
     {
-        for(int j = 1; j <= col; j++)
+        nx = x + dx[i], ny = y + dy[i];
+        if(nx > 0 && nx <= R && ny > 0 && ny <= C && heights[x][y] > heights[nx][ny])
         {
-            dp[i+1][j] = max(dp[i][j] + 1, dp[i+1][j]);
-            dp[i-1][j] = max(dp[i][j] + 1, dp[i-1][j]);
-            dp[i+1][j-1] = max(dp[i][j] + 1, dp[i][j-1]);
-            dp[i][j+1] = max(dp[i][j] + 1, dp[i+1][j+1]);
+            search(nx, ny);
+            sum[x][y] = max(sum[x][y], sum[nx][ny] + 1);
         }
     }
+    return sum[x][y];
+}
+```
+### 下面是一位大佬用优先队列实现的dp求解:
+🔗https://www.luogu.com.cn/article/8f7hlep9
+```cpp
+#include<iostream>
+#include<queue>
+using namespace std;
+struct node{
+    int i,j,num,f;
+};//结构体存点
+struct cmp1{
+    bool operator()(node x,node y){
+        return x.num>y.num;
+    }
+};//优先队列小的在前面
+priority_queue<node,vector<node>,cmp1>q;//stl大法好
+int n,m,maxn,maxj,maxi,w,top=0,g[101][101],f[101][101];
+int main(){
+    cin>>n>>m;
+    for(int i=1;i<=n;i++){
+        for(int j=1;j<=m;j++){
+        	f[i][j]=1;//长度最开始为1，它自己
+            cin>>g[i][j];
+            node a;
+            a.i=i;a.j=j;a.f=0;a.num=g[i][j];
+            q.push(a);//入队
+        }
+    }
+    while(!q.empty()){
+        node now1=q.top();//取点
+        int i=now1.i;
+        int j=now1.j;//坐标
+        int now=now1.num;//此点的权值
+        q.pop();//出队
+        if(g[i-1][j]<now) f[i][j]=max(f[i][j],f[i-1][j]+1);
+            if(g[i+1][j]<now) f[i][j]=max(f[i][j],f[i+1][j]+1);
+            if(g[i][j-1]<now) f[i][j]=max(f[i][j],f[i][j-1]+1);
+            if(g[i][j+1]<now) f[i][j]=max(f[i][j],f[i][j+1]+1);//dp
+            if(maxn<f[i][j]) maxn=f[i][j];//取最大值
+    }
+    cout<<maxn;//输出
+    return 0;//第一篇题解，请多支持！
 }
 ```
