--- a/kislate_workshop/Problems/luogu/2025_spring/DP/P2196_挖地雷.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/DP/P2196_挖地雷.md
@@ -42,7 +42,7 @@
 ```
 
 ### 输出 #1
-
+$$\texttt{nodeptr[n][m] for memory}$$
 ```
 1 3 4 5
 27
@@ -54,7 +54,151 @@
 
 NOIP 1996 提高组第三题
 
-### 下面是我的代码:
+### hsq的ac代码:
 ```cpp
+#include <bits/stdc++.h>
+using namespace std;
+struct Node{
+    int value = 0;  //节点的值
+    string p;  //路径
+};
+int main(){
+    int N;  // 地窖的个数
+    cin >> N;
+    vector<int> A(N+1);  // 地窖中地雷的个数
+    for (int i = 1; i <= N; i++) {
+        cin >> A[i];
+    }
+    vector<vector<int>> path  (N+1,vector<int>(N+1));  // 地窖之间的路径
+    for( int i=1;i<=N;i++){
+        path[i][i] = 0;  // 地窖i到地窖i的路径为0
+        for(int j=i+1;j<=N;j++){
+            cin >> path[i][j];  // 地窖i到地窖j的路径(0或1)
+        }
+    }
+    vector<Node> dp(N+1);  // dp数组，表示第i个地窖时挖到地雷的最大值
+    for(int i=1;i<=N;i++){
+        dp[i].value = A[i];  // 初始化dp数组，表示第i个地窖时挖到地雷的最大值
+        dp[i].p = to_string(i);  // 初始化路径为i
+    }
+    int ans = A[1];  // 最终的答案
+    int ans_index = 1;  // 最终的答案的下标
+    for(int i=1;i<=N;i++){
+        for(int j=i+1;j<=N;j++){
+            if(path[i][j] == 1){  // 如果地窖i和地窖j之间有路径
+                // dp[j] = max(dp[j],dp[i]+A[j]);  // 更新dp[j]的值
+                if(dp[j].value < dp[i].value + A[j]){
+                    dp[j].value = dp[i].value + A[j];  // 更新dp[j]的值
+                    dp[j].p = dp[i].p + " " + to_string(j);  // 更新路径为dp[i].p +" " + dp[j].p
+                }
+                if(dp[j].value > ans){  // 如果dp[j]的值大于当前的答案
+                    ans = dp[j].value;
+                    ans_index = j;  // 更新最终的答案的下标为j
+                }
+            }
+            else{
+                if(dp[j].value > ans){  // 如果dp[j]的值大于当前的答案
+                    ans = dp[j].value;
+                    ans_index = j;  // 更新最终的答案的下标为j
+                }
+            }
+        }
+    }
+    cout << dp[ans_index].p << endl;  // 输出最终的答案的路径
+    cout << ans << endl;  // 输出最终的答案
+}
+```
+### 下面是我的思路错误的代码:
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
 
+typedef struct landmine{
+   int  num;
+   int  sum;
+   int  prior;
+}landmine;
+
+int main(void){
+    int n;
+    cin >> n;
+    vector<vector<int>> nodeptr(n + 3, vector<int>(n + 100, 0));// 打算把第一位当作储存连接的点的个数
+    vector<landmine> node(n + 3, {0, 0, 0});
+    for(int i = 1; i <= n; i++) cin >> node[i].num, node[i].prior = 0;
+    for(int i = 1; i <= n-1; i++){
+        int cnt = 0;
+        for(int j = 1; j <= n-i; j++)
+        {
+            int type;
+            cin >> type;
+            if(type) nodeptr[i][++cnt] = i + j;
+        }
+        nodeptr[i][0] = cnt;
+        cnt = 0;
+    }
+    // // 调试:
+    // for(int i = 1; i <= n; i++){
+    //     cout << node[i].num << " ";
+    // }
+    // cout << endl;
+    // for(int i = 1; i <= n-1; i++)
+    // {
+    //     for(int j = 1; j <= nodeptr[i][0]; j++)
+    //     {
+    //         cout << nodeptr[i][j] << " ";
+    //     }
+    //     cout << endl;
+    // }
+    pair<int, int> ans_sum_node = {0, 0};
+
+    vector<int> mem(n + 3, 0);
+    mem[1] = ans_sum_node.first;
+    int node_num = ans_sum_node.first, cnt = 1, cnt_final = 0, start = 0;
+
+    for(int m = 1; m <= n; m++)
+    {
+        bool change = false;
+        //node[1].sum = node[1].num;
+        node[m].sum = node[m].num;
+        if(node[m].sum > ans_sum_node.second){
+            ans_sum_node.first = m;
+            ans_sum_node.second = node[m].sum;
+            change = true;
+            start = m;
+        }
+        for(int i = m; i <= n-1; i++){
+            for(int j = 1; j <= nodeptr[i][0]; j++){
+                if(node[nodeptr[i][j]].sum < node[i].sum + node[nodeptr[i][j]].num){
+                    node[nodeptr[i][j]].sum = node[i].sum + node[nodeptr[i][j]].num;
+                    node[nodeptr[i][j]].prior = i;
+                }
+                if(node[nodeptr[i][j]].sum > ans_sum_node.second){
+                    ans_sum_node.first = nodeptr[i][j];
+                    ans_sum_node.second = node[nodeptr[i][j]].sum;
+                    change = true;
+                }
+            }
+        }
+
+        if(change){
+            node_num = ans_sum_node.first;
+            while(node_num != m){
+                node_num = mem[++cnt] = node[node_num].prior;
+            }
+            mem[m] = ans_sum_node.first;
+            cnt_final = cnt;
+            start = m;
+        }
+        // 清空:
+        for(int i = 1; i <= n; i++){
+            node[i].sum = 0;
+            node[i].prior = 0;
+        }
+    }
+    // 输出顺序:
+    for(int i = cnt_final; i >= start; i--){
+        cout << mem[i] << " ";
+    }
+    cout << endl << ans_sum_node.second << endl;
+}
 ```
