--- a/kislate_workshop/Problems/luogu/2025_spring/DP/P2196_挖地雷.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/DP/P2196_挖地雷.md
@@ -202,3 +202,81 @@ int main(void){
     cout << endl << ans_sum_node.second << endl;
 }
 ```
+### 下面是在hsq的基础上写的ac代码:
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+typedef struct landmine{
+    int value;
+    string path;
+}landmine;
+int main(void)
+{
+    int N;
+    cin >> N;
+    vector<landmine> dp(N+1, {0, ""});
+    vector<int> A(N+1, 0);// 存储值
+    vector<vector<int>> B(N+1, vector<int>(N+1, 0));// 是否连通
+    for(int i = 1; i <= N; i++) cin >> A[i], dp[i].value = A[i], dp[i].path = to_string(i);
+    for(int i = 1; i <= N-1;i++) for(int j = i+1; j <= N;j++) cin >> B[i][j];
+    int ans = A[1], ans_index = 1;
+    for(int i = 1; i<= N; i++)
+    {
+        for(int j = i+1; j <= N; j++)
+        {
+            if(B[i][j])
+            {
+                if(dp[j].value < dp[i].value + A[j]){
+                    dp[j].value = dp[i].value + A[j];
+                    dp[j].path = dp[i].path + " " + to_string(j);
+                }
+            }
+            if(dp[j].value > ans){
+                ans = dp[j].value;
+                ans_index = j;
+            }
+        }
+    }
+    cout << dp[ans_index].path << endl;
+    cout << dp[ans_index].value << endl;
+}
+```
+
+### 下面是另外一版新的, 用前继来解决
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+void print(int i, vector<int> prior){
+    if(prior[i] == 0) 
+    {
+        printf("%d", i);
+        return;
+    }
+    else
+    {
+        print(prior[i], prior);
+        printf(" %d", i);
+    }
+}
+int main(void){
+    int N;
+    cin >> N;
+    vector<int> prior(N + 1, 0), dp(N + 1, 0), num(N + 1, 0);
+    vector<vector<int>> path(N + 1, vector<int>(N + 1, 0));
+    for(int i = 1; i <= N; i++) cin >> num[i];
+    for(int i = 1; i <= N-1; i++) for(int j = i + 1; j <= N; j++) cin >> path[i][j];
+    int ans = num[1], ans_index = 1;
+    for(int i = 1; i <= N; i++)
+    {
+        for(int j = 1; j <= N; j++)
+        {
+            if(path[j][i] && dp[i] < dp[j]) dp[i] = dp[j], prior[i] = j;
+        }
+        dp[i] += num[i];
+        if(dp[i] > ans) ans = dp[i], ans_index = i;
+    }
+    print(ans_index, prior);
+    cout << endl;
+    cout << ans << endl;
+}
+```
