--- a/kislate_workshop/Problems/luogu/2025_spring/DP/P2196_挖地雷.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/DP/P2196_挖地雷.md
@@ -280,3 +280,65 @@ int main(void){
     cout << ans << endl;
 }
 ```
+
+### 下面这一版似乎得以证明`prior`不会记录混乱, 最终改良版:
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+void print(int i, vector<int> prior){
+    if(prior[i] == 0) 
+    {
+        printf("%d", i);
+        return;
+    }
+    else
+    {
+        print(prior[i], prior);
+        printf(" %d", i);
+    }
+}
+int main(void){
+    int N;
+    cin >> N;
+    vector<int> prior(N + 1, 0), dp(N + 1, 0), num(N + 1, 0), prior_final(N + 1, 0);
+    vector<vector<int>> path(N + 1, vector<int>(N + 1, 0));
+    for(int i = 1; i <= N; i++) cin >> num[i];
+    for(int i = 1; i <= N-1; i++) for(int j = i + 1; j <= N; j++) cin >> path[i][j];
+    int ans = num[1], ans_index = 1;
+    int ans_final = -1e4, ans_index_final = 1;
+    for(int i = 1; i <= N; i++)
+    {
+        dp[i] = num[i];
+        prior[i] = 0;
+        ans = num[i], ans_index = i;
+        for(int j = i; j <= N; j++)
+        {
+            for(int k = j + 1; k <= N; k++)
+            {
+                if(path[j][k] == 1 && dp[k] < dp[j] + num[k])
+                {
+                    dp[k] = dp[j] + num[k];
+                    prior[k] = j;
+                }
+                if(dp[k] > ans)
+                {
+                    ans = dp[k];
+                    ans_index = k;
+                }
+            }
+        }
+        if(ans > ans_final)
+        {
+            ans_final = ans;
+            ans_index_final = ans_index;
+            for(int i = 1; i <= N; i++) prior_final[i] = prior[i];
+        }
+        for(int i = 1; i <= N; i++) dp[i] = 0;
+        for(int i = 1; i <= N; i++) prior[i] = 0;
+    }
+    print(ans_index_final, prior_final);
+    cout << endl; 
+    printf("%d\n", ans_final);
+    return 0;
+}
+```
