Add new problems and solutions for Luogu 2025 Spring workshop
- Added problem P1803: 凌乱的yyy / 线段覆盖 with C++ solution.
- Added problem P3817: 小A的糖果 with C++ solution.
- Added problem P4995: 跳跳！ with C++ solution.
- Added problem P5019: 铺设道路 with C++ solution.
- Added problem P1032: 字串变换 with DFS and BFS solutions.
- Added problem P1433: 旅行商问题 with state compression DP explanation.
- Added game theory problems P4018 and P4860: Roy&October with C++ solutions.
- Added TSP algorithm explanation and comparison between DFS and state compression DP.
- Created test files for greedy and search algorithms.

--- a/kislate_workshop/Problems/luogu/2025_spring/Search/P1433_吃奶酪.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/Search/P1433_吃奶酪.md
@@ -99,53 +99,50 @@ void dfs(double x, double dis)
     }
 }
 ```
+$$TSP状态压缩大法$$
+```cpp
+                             //请严格注意位运算符的优先级
+                             << >> | 这些均没有 ! 优先
+                                !(mask & (1 << u)
+                                
+                               -(减号) 比<< >> 优先
+                                  ((1<<(n+1))-1
+```
+
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
-float cal_dis(int x1, int y1, int x2, int y2)
-{
-    return sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2));
-}
-
 int n;
-vector<pair<double, double>> cheese;
-double dp[1<<16][16];
-
-double cal_dis(double x1, double y1, double x2, double y2) {
-    return sqrt((x1-x2)*(x1-x2)+(y1-y2)*(y1-y2));
+vector<pair<double, double>> cheeses;
+vector<vector<double>> dp;
+double cal_dis(int u, int v){
+    return sqrt(pow(cheeses[u].first - cheeses[v].first, 2) + pow(cheeses[u].second - cheeses[v].second, 2));
 }
-
-int main() {
+int main(void)
+{
     cin >> n;
-    cheese.push_back({0,0});=
-    for(int i=1;i<=n;i++) {
-        double x, y;
-        cin >> x >> y;
-        cheese.push_back({x, y});
-    }
-    int N = n+1;
-    int full = (1<<N)-1;
-    for(int i=0;i<(1<<N);i++)
-        for(int j=0;j<N;j++)
-            dp[i][j]=1e18;
-    dp[1][0]=0; // 只在原点
-
-    for(int mask=1;mask<(1<<N);mask++) {
-        for(int u=0;u<N;u++) {
-            if(!(mask&(1<<u))) continue;
-            for(int v=1;v<N;v++) {
-                if(mask&(1<<v)) continue;
-                int next=mask|(1<<v);
-                double d=cal_dis(cheese[u].first,cheese[u].second,cheese[v].first,cheese[v].second);
-                dp[next][v]=min(dp[next][v],dp[mask][u]+d);
+    cheeses.resize(n + 1, {0, 0});
+    dp.resize( 1 << (n + 1), vector<double>(n + 1, 1e18));
+    for(int i = 1; i <= n; i++) cin >> cheeses[i].first >> cheeses[i].second; // 输入奶酪的坐标
+    dp[1][0] = 0;// 这保证了一定是从0开始的, 因为从其他的开始的, 都不可能比从0开始的更小, 而且我们不讨论其他到达0的情况
+    for(int mask=1; mask < (1 << (n + 1)); mask++)//
+    {
+        for(int u = 0; u <= n; u++)
+        {
+            if(!(mask & (1 << u)))// 如果无法从u出发
+                continue;
+            for(int v = 1; v <= n; v++)
+            {
+                if(mask & (1 << v))// 如果v已经在mask中,说明已经到达了v, 就不需要考虑了
+                    continue;
+                int next = mask | (1 << v); // 计算在mask基础上到v的mask
+                dp[next][v] = min(dp[next][v], dp[mask][u] + cal_dis(u, v)); // 计算从u到v的距离, 然后加上到u的距离, 更新到v的最小值
             }
         }
     }
-    double ans=1e18;
-    for(int i=1;i<N;i++) {
-        ans=min(ans,dp[full][i]);
-    }
-    printf("%.2f\n",ans);
+    double ans = 1e18;
+    for(int i = 1; i<=n; i++) ans = min(ans, dp[((1<<(n+1))-1)][i]);
+    cout << fixed << setprecision(2) << ans << endl; // 输出结果, 保留两位小数
     return 0;
 }
 ```
