--- a/kislate_workshop/Problems/luogu/2025_spring/Bitmask_DP/P2622_关灯问题.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/Bitmask_DP/P2622_关灯问题.md
@@ -48,3 +48,55 @@
 上面的数据点可能会重叠。
 
 对于 $100\%$ 的数据，$1 \le n \le 10, 1 \le m \le 100$。
+
+### 随记:
+发现一个很好玩的问题, 当你用无符号整型进行降序遍历的时候, 用到了`i >= 0`, 但是$i == 0$的时候再减就会变得非常大, 那么就无法出循环, 还会越界, 牛逼;
+
+## 过了!:
+$$可以用bfs简化, 就是如果先把初状态放进去, 遍历一遍开关, 如果新状态没达到过, 就压入队列, 时间复杂度应该比我这优秀很多$$
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+vector<int> dp, ctl1, ctl2;
+int n, m;
+int main(void)
+{
+    cin >> n >> m;
+    dp.resize(1 << n, -1);
+    dp[(1 << n) - 1] = 0; // 所有灯都开
+    ctl1.resize(m, 0); // 控制灯的开
+    ctl2.resize(m, (1 << n) - 1); // 控制灯的关
+    for(int i = 0; i < m; i++)
+    {
+        for(int j = 0; j < n; j++)
+        {
+            int x;
+            cin >> x;
+            if(x == 0) continue;
+            if(x == -1) ctl1[i] |= (1 << j); // 保证第j + 1个灯是开的
+            else if(x == 1) ctl2[i] &= ~(1 << j); // 保证第j + 1个灯是关的
+        }
+    }
+    while(1)
+    {
+        bool changed = false;
+        for(int i = ((1 << n) - 1); i >= 0; i--)
+        {
+            if(dp[i] == -1) continue;
+            for(int j = 0; j < m; j++)
+            {
+                int next = i | ctl1[j]; // 先把灯打开
+                next &= ctl2[j]; // 再把灯关掉
+                if(dp[next] == -1 || dp[next] > dp[i] + 1)
+                {
+                    dp[next] = dp[i] + 1;
+                    changed = true; // 说明有状态更新
+                } 
+            }
+        }
+        if(!changed) break; // 没有状态更新，说明已经遍历完了
+    }
+    cout << dp[0] << endl; // 输出所有灯都关的状态
+    return 0;
+}
+```
