--- a/kislate_workshop/Problems/luogu/2025_spring/Greedy/P4447_分组.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/Greedy/P4447_分组.md
@@ -148,3 +148,86 @@ int main(void) {
     return 0;
 }
 ```
+
+### 下面是沿用大佬的思路的题解:
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+int main(void)
+{
+    int n, ans = 1e9;
+    cin >> n;
+    map<int, int> power_map;
+    vector<pair<int, int>> power_sum;
+    for(int i = 0; i < n; i++)
+    {
+        int x;
+        cin >> x;
+        power_map[x]++;
+    }
+    for(auto it : power_map) power_sum.push_back(it);
+    int len = (int)power_sum.size();
+    for(int i = 0; i < len; i++)
+    {
+        while(power_sum[i].second > 0)
+        {
+            int cnt = 0;
+            for(int j = i; j < len; j++)
+            {
+                if(((j == len-1) || power_sum[j+1].first - power_sum[j].first != 1) || (power_sum[j+1].second < power_sum[j].second))
+                {
+                    power_sum[j].second--;
+                    cnt++;
+                    ans = min(ans, cnt);
+                    break;
+                }
+                else{
+                    power_sum[j].second--;
+                    cnt++;
+                }
+            }
+            ans = min(ans, cnt);
+        }
+    }
+    cout << ans << endl;
+    return 0;
+}
+```
+### 大佬的正解:
+```cpp
+#include<cstdio>
+#include<map>
+std::map<int,int>m;
+typedef std::map<int,int>::iterator it;
+int main(){
+	int n,ans=0x3f3f3f3f;
+	scanf("%d",&n);
+	for(int i=0;i<n;++i){
+		int t;
+		scanf("%d",&t);
+		++m[t];
+		//记录图像。
+	}
+	while(!m.empty()){
+		it i=m.begin(),j=m.begin();
+		--(*i).second;
+		int t=1;
+		for(++j;j!=m.end()&&(*j).first==(*i).first+1&&(*j).second>(*i).second;++i,++j){
+   			++t;
+			--(*j).second;
+		}
+		//若 i,j 所对应的能力值是连续的，且 i 对应的那一列高度不高于 j，则继续画线。
+		i=m.begin();
+		while(i!=m.end()&&(*i).second==0){
+			m.erase((*i++).first);
+		}
+		//高度降为 0 后直接删除，便于计算。
+		if(t<ans){
+			ans=t;
+		}
+		//记录答案。
+	}
+	printf("%d",ans);
+	return 0;
+}
+```
