任务二完成

--- a/kislate_workshop/Problems/luogu/2025_spring/Greedy/P1478_陶陶摘苹果升级版）.md
+++ b/kislate_workshop/Problems/luogu/2025_spring/Greedy/P1478_陶陶摘苹果升级版）.md
@@ -46,3 +46,36 @@
 ## 说明/提示
 
 对于 $100\%$ 的数据，$n\leq 5000$, $a\leq 50$, $b\leq 200$, $s\leq 1000$, $x_i\leq 280$, $y_i\leq 100$。
+
+## 过于简单被"+"嘲笑了:
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+struct cmp{
+    bool operator()(pair<int, int> a, pair<int, int> b){
+        return a.second > b.second;
+    }
+    
+};
+int main(void)
+{
+    int n, s, a, b, max_height = 0, cnt = 0;
+    cin >> n >> s >> a >> b;
+    max_height = a + b;
+    priority_queue<pair<int, int>, vector<pair<int, int>>, cmp> heapq;
+    for(int i = 0; i < n; i++){
+        int x, y;
+        cin >> x >> y;
+        if(x > max_height || y > s) continue;
+        heapq.push({x, y});
+    }
+    while(!heapq.empty()){
+        auto [x, y] = heapq.top();
+        heapq.pop();
+        if(s - y < 0) continue;
+        s -= y;
+        cnt++;
+    }
+    cout << cnt << endl;
+}
+```
