--- a/kislate_workshop/Problems/luogu/2025_spring/string_luogu/P3375_KMP(模板).md
+++ b/kislate_workshop/Problems/luogu/2025_spring/string_luogu/P3375_KMP(模板).md
@@ -53,3 +53,83 @@ ABA
 - Subtask 3（30 points）：无特殊约定。
 
 对于全部的测试点，保证 $1 \leq |s_1|,|s_2| \leq 10^6$，$s_1, s_2$ 中均只含大写英文字母。
+
+## 下面第一份是AI算法:
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+
+// 构造 next 数组，next[i] 表示 s[0...i] 的最长相等前后缀长度
+void getNext(const string &s, vector<int> &next) {
+    int n = s.size();
+    next[0] = 0;
+    int j = 0;
+    for(int i = 1; i < n; i++) {
+        while(j > 0 && s[i] != s[j]) j = next[j-1];
+        if(s[i] == s[j]) j++;
+        next[i] = j;
+    }
+}
+
+// KMP 主体
+void kmp(const string &s1, const string &s2, const vector<int> &next) {
+    int n = s1.size(), m = s2.size();
+    int j = 0;
+    for(int i = 0; i < n; i++) {
+        while(j > 0 && s1[i] != s2[j]) j = next[j-1];
+        if(s1[i] == s2[j]) j++;
+        if(j == m) {
+            cout << i - m + 2 << endl; // 1-based
+            j = next[j-1];
+        }
+    }
+}
+
+int main(void){
+    string s1, s2;
+    cin >> s1 >> s2;
+    vector<int> next(s2.length(), 0);
+    getNext(s2, next);
+    kmp(s1, s2, next);
+    for(int i = 0; i < next.size(); i++) cout << next[i] << " ";
+    return 0;
+}
+```
+
+## 我的代码,也过了
+```cpp
+#include <bits/stdc++.h>
+using namespace std;
+void nextval(const string &s, vector<int> &next);
+void kmp(const string &s1, const string &s2, vector<int> &next);
+int main(void){
+    string s1, s2;
+    cin >> s1 >> s2;
+    vector<int> next(s2.length() + 1, 0);
+    nextval(s2, next);
+    kmp(s1, s2, next);
+    for(int i = 1; i < next.size(); i++) cout << next[i] << " ";
+    return 0;
+}
+
+void nextval(const string &s, vector<int> &next){
+    int j = -1, i = 0;
+    next[0] = -1;
+    while(i < s.length())
+    {
+        while(j != -1 && s[i] != s[j]) j = next[j];
+        next[++i] = ++j;
+    }
+}
+void kmp(const string &s1, const string &s2, vector<int> &next){
+    int j = 0;
+    for(int i = 0; i < s1.length(); i++){
+        while(j > 0 && s1[i] != s2[j]) j = next[j];
+        if(s1[i] == s2[j]) j++;
+        if(j == s2.length()){
+            cout << i + 2 - j<< endl;
+            j = next[j];
+        }
+    }
+}
+```
